# ocp-tessellate

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  TODO  pyproject.toml  pytest.ini  setup.cfg  setup.py
examples/: test_build123d hexapod.py  test_cache.py  test_cadquery_bearing.py  test_cadquery_disk-arm.py  test_cadquery_jansen-linkage.py  test_cadquery_sketch.py  test_color.py  test_coordsystem.py  test_instances.py  test_stl.py  tests_build123d hinge.py  tests_build123d.py  tests_cadquery.py  tests_cadquery_boxes.py  tests_cadquery_door.py  tests_cadquery_hexapod.py
ocp_tessellate/: __init__.py  _version.py  b123d_assembly.py  cad_objects.py  cad_objects2.py  cad_objects_alt.py  convert.py  convert2.py  defaults.py  mp_tess.py  mp_tessellator.py  ocp_utils.py  serialize.py  stepreader.py  tessellator.py  trace.py  types.py  utils.py
pytests/: test_build123d.py  test_cache.py  test_cadquery.py  test_color.py  test_empty.py  test_imageface.py  test_instances.py  test_to_ocp.py
tests/: chamfer_box.stl  test_build123d hexapod.py  test_build123d.py  test_cache.py  test_cadquery.py  test_cadquery_bearing.py  test_cadquery_jansen-linkage.py  test_cadquery_sketch.py  test_color.py  test_coordsystem.py  test_empty.py  test_imageface.py  test_instances.py  test_parallel.py  test_partgroup.py  test_stl.py  tests_build123d assembly.py  tests_build123d hinge.py  tests_build123d.py  tests_cadquery.py  tests_cadquery_boxes.py  tests_cadquery_door.py  tests_cadquery_hexapod.py  tests_manual.py
