[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-tessellate"
version = "3.0.11"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
description = "Tessellate OCP (https://github.com/cadquery/OCP) objects to use with threejs"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "3d models",
    "3d printing",
    "3d viewing",
    "3d",
    "brep",
    "cad",
    "cadquery",
    "opencscade",
    "python",
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = ["webcolors~=24.8.0", "numpy", "cachetools~=5.5.0", "imagesize"]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["questionary~=1.10.0", "bump-my-version", "black", "twine", "pytest"]

[project.urls]
"Homepage" = "https://github.com/bernhard-42/ocp-tessellate"
"Bug Tracker" = "https://github.com/bernhard-42/ocp-tessellate/issues"

# black settings

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 88

# bump-my-version settings

[tool.bumpversion]
current_version = "3.0.11"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\d*)(?P<build>\\d*)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
sign_tags = false
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ocp_tessellate/_version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
